src/app/globals.css
@import "tailwindcss";

@plugin "@iconify/tailwind4";

:root {
  --background: #ffffff;
  --foreground: #000000;

  --header-height: --spacing(13);

  --landing-page-hero-height: 100svh;

  --logo-lockup-logo-size: min(32vmin, 320px);
  --logo-lockup-gap-size: min(6vmin, 48px);
  --logo-lockup-text-size: min(6vmin, 48px);
  --logo-lockup-height: calc(
    var(--logo-lockup-logo-size) + var(--logo-lockup-gap-size) +
      var(--logo-lockup-text-size)
  );
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #000000;
    --foreground: #ffffff;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

